[project]
name = "compilertoolkit"
version = "0.1.0"
description = "An opinionated library to assist in building compilers"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = ["rply>=0.7.8"]

license = { text = "LGPL-3.0-only" }
keywords = [
    "compilers",
    "library",
    "package",
    "interpreters",
    "parsers",
    "lexers",
    "validation",
    "validator",
    "ergonomic",
    "type-annotated",
    "type-annotations",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 2 - Pre-Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://summersweet.software"
# Documentation = "https://readthedocs.org" # Not yet created
Repository = "https://github.com/summersweet-software/compilertoolkit"
Issues = "https://github.com/summersweet-software/compilertoolkit/issues"


[dependency-groups]
dev = ["mypy>=1.20.1", "sphinx>=9.1.0", "sphinx-autobuild>=2025.8.25"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
